--- a/vis/sentiment/index.html
+++ b/vis/sentiment/index.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Multi Series Span Chart (Vertical)</title>
+        <title>Sentiment Analysis - The Office (U.S.)</title>
         <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
         <div id="chart1" class="chart"></div>
+        <div id="chart2" class="chart"></div>
+        <div id="chart3" class="chart"></div>
+        <div id="chart4" class="chart"></div>
         <!--<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>-->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
     </body>
