Arrange plots in a table

--- a/vis/sentiment/index.html
+++ b/vis/sentiment/index.html
@@ -6,12 +6,18 @@
         <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
-        <div id="chart1" class="chart"></div>
-        <div id="chart2" class="chart"></div>
-        <div id="chart3" class="chart"></div>
-        <div id="chart4" class="chart"></div>
-        <!--<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>-->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+      <table>
+        <tr>
+          <td><div id="chart1" class="chart"></div></td>
+          <td><div id="chart2" class="chart"></div></td>
+          <td><div id="chart3" class="chart"></div></td>
+        </tr>
+        <tr>
+          <td><div id="chart4" class="chart"></div></td>
+        </tr>
+      </table>
+
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
     </body>
     <script type="text/javascript" src="main.js"></script>
 </html>
