--- a/vis/sentiment/index.html
+++ b/vis/sentiment/index.html
@@ -8,12 +8,19 @@
     <body>
       <table>
         <tr>
-          <td><div id="chart1" class="chart"></div></td>
-          <td><div id="chart2" class="chart"></div></td>
-          <td><div id="chart3" class="chart"></div></td>
+          <td><div id="michael" class="chart"></div></td>
+          <td><div id="stanley" class="chart"></div></td>
+          <td><div id="dwight" class="chart"></div></td>
         </tr>
         <tr>
-          <td><div id="chart4" class="chart"></div></td>
+          <td><div id="pam" class="chart"></div></td>
+          <td><div id="angela" class="chart"></div></td>
+          <td><div id="toby" class="chart"></div></td>
+        </tr>
+        <tr>
+          <td><div id="jim" class="chart"></div></td>
+          <td><div id="packer" class="chart"></div></td>
+          <td><div id="andy" class="chart"></div></td>
         </tr>
       </table>
 
