--- a/vis/sentiment/index.html
+++ b/vis/sentiment/index.html
@@ -24,6 +24,19 @@
         </tr>
       </table>
 
+      <p>This visualization shows the results of running
+      <a href="https://www.nltk.org/">NLTK's</a>
+      sentiment analyzer on every line of dialog in The Office for the six
+      characters shown.</p>
+
+      <p>Each line plotted shows the sentiment--positive or negative--for the
+      dialog, and the lines are plotted in sequence for all of each character's
+      dialog over each season of the show.</p>
+
+      <p>The visualization was created using <a href="https://d3js.org">D3.js</a>.
+      You can move your mouse over the lines to see the dialog spoken, as well
+      as some other data from the analysis.</p>
+
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
     </body>
     <script type="text/javascript" src="main.js"></script>
